usr/src/uts/common/fs/nfs/nfs_vnops.c
@@ -25,6 +25,10 @@
  *	All rights reserved.
  */
 
+/*
+ * Copyright (c) 2013, Joyent, Inc. All rights reserved.
+ */
+
 #include <sys/param.h>
 #include <sys/types.h>
 #include <sys/systm.h>
@@ -1167,7 +1171,12 @@ nfs_setattr(vnode_t *vp, struct vattr *vap, int flags, cred_t *cr,
 	if (error)
 		return (error);
 
-	return (nfssetattr(vp, vap, flags, cr));
+	error = nfssetattr(vp, vap, flags, cr);
+
+	if (error == 0 && (mask & AT_SIZE) && vap->va_size == 0)
+		vnevent_truncate(vp, ct);
+
+	return (error);
 }
 
 static int
@@ -2030,6 +2039,14 @@ nfs_create(vnode_t *dvp, char *nm, struct vattr *va, enum vcexcl exclusive,
 				    vp->v_type == VREG) {
 					vattr.va_mask = AT_SIZE;
 					error = nfssetattr(vp, &vattr, 0, cr);
+
+					if (!error) {
+						/*
+						 * Existing file was truncated;
+						 * emit a create event.
+						 */
+						vnevent_create(vp, ct);
+					}
 				}
 			}
 		}
@@ -2037,10 +2054,6 @@ nfs_create(vnode_t *dvp, char *nm, struct vattr *va, enum vcexcl exclusive,
 		if (error) {
 			VN_RELE(vp);
 		} else {
-			/*
-			 * existing file got truncated, notify.
-			 */
-			vnevent_create(vp, ct);
 			*vpp = vp;
 		}
 		return (error);
@@ -4610,6 +4623,9 @@ nfs_space(vnode_t *vp, int cmd, struct flock64 *bfp, int flag,
 			va.va_mask = AT_SIZE;
 			va.va_size = bfp->l_start;
 			error = nfssetattr(vp, &va, 0, cr);
+
+			if (error == 0 && bfp->l_start == 0)
+				vnevent_truncate(vp, ct);
 		} else
 			error = EINVAL;
 	}
